--- a/templates/docker-compose.yaml.j2
+++ b/templates/docker-compose.yaml.j2
@@ -1,6 +1,6 @@
 # docker-compose.yaml
 
-version: '3.7'
+version: '3.8'
 services: 
 
 
@@ -9,23 +9,20 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime
       - /etc/ssl/certs/:/etc/ssl/certs/
-      - {{ app_data }}/config:/config
+      - {{ directories_files }}/config:/config
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=America/Los_Angeles
+      - fpm="false"
+      - branch="v2-master"
     deploy:
       labels:
         - traefik.enable=true
         - traefik.http.services.{{ proxy_router_main }}.loadbalancer.server.port=80
         - traefik.http.routers.{{ proxy_router_main }}.tls.certresolver=step-ca
-        - traefik.http.routers.{{ proxy_router_main }}.rule=Host(`{{ proxy_domains | join('`,`') }}`)
+        - traefik.http.routers.{{ proxy_router_main }}.rule=Host(`{{ proxy_domain }}`)
     networks:
       - {{ docker_network }}
-
-
-
-
 
 networks:
   {{ docker_network }}:
