--- a/templates/docker-compose.yaml.j2
+++ b/templates/docker-compose.yaml.j2
@@ -5,7 +5,7 @@ services:
 
 
   main:
-    image: organizr:organizr
+    image: organizr/organizr
     volumes:
       - /etc/localtime:/etc/localtime
       - /etc/ssl/certs/:/etc/ssl/certs/
