--- a/templates/docker-compose.yaml.j2
+++ b/templates/docker-compose.yaml.j2
@@ -5,7 +5,7 @@ services:
 
 
   main:
-    image: organizr/organizr
+    image: organizr/organizr:latest@sha256:0cb41570276dccfb9031c6f59a5aa6fda0fbcca16794c21ac1c296c1f0880a4f
     volumes:
       - /etc/localtime:/etc/localtime
       - /etc/ssl/certs/:/etc/ssl/certs/
@@ -18,7 +18,7 @@ services:
         - traefik.enable=true
         - traefik.http.services.{{ proxy_router_main }}.loadbalancer.server.port=80
         - traefik.http.routers.{{ proxy_router_main }}.tls.certresolver=step-ca
-        - traefik.http.routers.{{ proxy_router_main }}.rule=Host(`{{ proxy_domain }}`)
+        - traefik.http.routers.{{ proxy_router_main }}.rule=Host(`{{ proxy_domains | join('`,`') }}`)
     networks:
       - {{ docker_network }}
 
