move to later image

--- a/.ansible/templates/docker-compose.yaml.j2
+++ b/.ansible/templates/docker-compose.yaml.j2
@@ -5,7 +5,7 @@ services:
 
 
   main:
-    image: organizr/organizr:latest@sha256:0cb41570276dccfb9031c6f59a5aa6fda0fbcca16794c21ac1c296c1f0880a4f
+    image: organizr/organizr
     volumes:
       - /etc/localtime:/etc/localtime
       - /etc/ssl/certs/:/etc/ssl/certs/
