--- a/.ansible/templates/docker-compose.yaml.j2
+++ b/.ansible/templates/docker-compose.yaml.j2
@@ -9,7 +9,7 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime
       - /etc/ssl/certs/:/etc/ssl/certs/
-      - {{ directories_data }}:/config
+      - {{ data_dir }}/:/config/
     environment:
       - PUID=1001
       - PGID=1001
